added extra recipe and seafood pages have added a new navbar with foundation added new images

--- a/assets/css/foundation/components/_top-bar.scss
+++ b/assets/css/foundation/components/_top-bar.scss
@@ -12,7 +12,7 @@
 $include-html-top-bar-classes: $include-html-classes !default;
 
 // Background color for the top bar
-$topbar-bg-color: #333 !default;
+$topbar-bg-color: #537428 !default;
 $topbar-bg: $topbar-bg-color !default;
 
 // Height and margin
@@ -36,12 +36,12 @@ $topbar-dropdown-toggle-alpha: 0.4 !default;
 $topbar-link-color: #fff !default;
 $topbar-link-color-hover: #fff !default;
 $topbar-link-color-active: #fff !default;
-$topbar-link-color-active-hover: #fff !default;
+$topbar-link-color-active-hover: #DAAC60 !default;
 $topbar-link-weight: normal !default;
 $topbar-link-font-size: rem-calc(13) !default;
-$topbar-link-hover-lightness: -10% !default; // Darken by 10%
+$topbar-link-hover-lightness:-10% !default; // Darken by 10%
 $topbar-link-bg: $topbar-bg !default;
-$topbar-link-bg-hover: #272727 !default;
+$topbar-link-bg-hover: #537428 !default;
 $topbar-link-bg-active: $primary-color !default;
 $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%) !default;
 $topbar-link-font-family: $body-font-family !default;
