--- a/assets/css/foundation/components/_top-bar.scss
+++ b/assets/css/foundation/components/_top-bar.scss
@@ -34,19 +34,19 @@ $topbar-dropdown-toggle-alpha: 0.4 !default;
 
 // Set the link colors and styles for top-level nav
 $topbar-link-color: #fff !default;
-$topbar-link-color-hover: #fff !default;
+$topbar-link-color-hover: #DAAC60 !default;
 $topbar-link-color-active: #fff !default;
 $topbar-link-color-active-hover: #DAAC60 !default;
 $topbar-link-weight: normal !default;
 $topbar-link-font-size: rem-calc(13) !default;
-$topbar-link-hover-lightness:-10% !default; // Darken by 10%
+$topbar-link-hover-lightness: #537428 -10% !default; // Darken by 10%
 $topbar-link-bg: $topbar-bg !default;
 $topbar-link-bg-hover: #537428 !default;
 $topbar-link-bg-active: $primary-color !default;
-$topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%) !default;
-$topbar-link-font-family: $body-font-family !default;
+$topbar-link-bg-active-hover: #537428 ($primary-color, $lightness: -14%) !default;
+$topbar-link-font-family: helvetica !default;
 $topbar-link-text-transform: none !default;
-$topbar-link-padding: $topbar-height / 3 !default;
+$topbar-link-padding: 28px !default;
 
 $topbar-button-font-size: 0.75rem !default;
 $topbar-button-top: 7px !default;
@@ -301,7 +301,7 @@ $topbar-arrows: true !default; //Set false to remove the triangle icon from the 
           display: block;
           width: 100%;
           color: $topbar-link-color;
-          padding: 12px 0 12px 0;
+          padding: 0 20px 0 20px;
           padding-#{$default-float}: $topbar-link-padding;
           font-family: $topbar-link-font-family;
           font-size: $topbar-link-font-size;
@@ -393,11 +393,13 @@ $topbar-arrows: true !default; //Set false to remove the triangle icon from the 
           width: 100%;
           height: auto;
 
+
           a {
             font-weight: $topbar-dropdown-link-weight;
             padding: 8px $topbar-link-padding;
             &.parent-link {
               font-weight: $topbar-link-weight;
+              padding:10px;
             }
           }
 
@@ -549,7 +551,7 @@ $topbar-arrows: true !default; //Set false to remove the triangle icon from the 
               color: $topbar-dropdown-link-color;
               line-height: 1;
               white-space: nowrap;
-              padding: 12px $topbar-link-padding;
+              padding: 0 $topbar-link-padding;
               background: $topbar-dropdown-link-bg;
             }
 
