--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -4274,7 +4274,7 @@ meta.foundation-mq-topbar {
         color: white;
         width: 50%;
         display: block;
-        padding: 0 15px; }
+        padding: 0 28px; }
   .top-bar .toggle-topbar {
     position: absolute;
     right: 0;
@@ -4286,11 +4286,11 @@ meta.foundation-mq-topbar {
       font-weight: bold;
       position: relative;
       display: block;
-      padding: 0 15px;
+      padding: 0 28px;
       height: 45px;
       line-height: 45px; }
     .top-bar .toggle-topbar.menu-icon {
-      right: 15px;
+      right: 28px;
       top: 50%;
       margin-top: -16px;
       padding-left: 40px; }
@@ -4342,17 +4342,17 @@ meta.foundation-mq-topbar {
     display: block;
     width: 100%;
     color: white;
-    padding: 12px 0 12px 0;
-    padding-left: 15px;
-    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+    padding: 0 20px 0 20px;
+    padding-left: 28px;
+    font-family: helvetica;
     font-size: 0.8125rem;
     font-weight: normal;
     text-transform: none;
     background: #333333; }
     .top-bar-section ul li > a.button {
       font-size: 0.8125rem;
-      padding-right: 15px;
-      padding-left: 15px;
+      padding-right: 28px;
+      padding-left: 28px;
       background-color: #008cba;
       border-color: #007095;
       color: white; }
@@ -4386,8 +4386,8 @@ meta.foundation-mq-topbar {
         color: white; }
   .top-bar-section ul li > button {
     font-size: 0.8125rem;
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 28px;
+    padding-left: 28px;
     background-color: #008cba;
     border-color: #007095;
     color: white; }
@@ -4421,7 +4421,7 @@ meta.foundation-mq-topbar {
         color: white; }
   .top-bar-section ul li:hover:not(.has-form) > a {
     background: #537428;
-    color: white; }
+    color: #daac60; }
   .top-bar-section ul li.active > a {
     background: #008cba;
     color: white; }
@@ -4429,7 +4429,7 @@ meta.foundation-mq-topbar {
       background: #0078a0;
       color: #daac60; }
   .top-bar-section .has-form {
-    padding: 15px; }
+    padding: 28px; }
   .top-bar-section .has-dropdown {
     position: relative; }
     .top-bar-section .has-dropdown > a:after {
@@ -4440,7 +4440,7 @@ meta.foundation-mq-topbar {
       border: inset 5px;
       border-color: transparent transparent transparent rgba(255, 255, 255, 0.4);
       border-left-style: solid;
-      margin-right: 15px;
+      margin-right: 28px;
       margin-top: -4.5px;
       position: absolute;
       top: 50%;
@@ -4474,9 +4474,10 @@ meta.foundation-mq-topbar {
       height: auto; }
       .top-bar-section .dropdown li a {
         font-weight: normal;
-        padding: 8px 15px; }
+        padding: 8px 28px; }
         .top-bar-section .dropdown li a.parent-link {
-          font-weight: normal; }
+          font-weight: normal;
+          padding: 10px; }
       .top-bar-section .dropdown li.title h5 {
         margin-bottom: 0; }
         .top-bar-section .dropdown li.title h5 a {
@@ -4484,11 +4485,11 @@ meta.foundation-mq-topbar {
           line-height: 22.5px;
           display: block; }
       .top-bar-section .dropdown li.has-form {
-        padding: 8px 15px; }
+        padding: 8px 28px; }
       .top-bar-section .dropdown li .button, .top-bar-section .dropdown li button {
         top: auto; }
     .top-bar-section .dropdown label {
-      padding: 8px 15px 2px;
+      padding: 8px 28px 2px;
       margin-bottom: 0;
       text-transform: uppercase;
       color: #777777;
@@ -4541,22 +4542,22 @@ meta.foundation-mq-topbar {
           display: none; }
     .top-bar-section li.hover > a:not(.button) {
       background: #537428;
-      color: white; }
+      color: #daac60; }
     .top-bar-section li:not(.has-form) a:not(.button) {
-      padding: 0 15px;
+      padding: 0 28px;
       line-height: 45px;
       background: #537428; }
       .top-bar-section li:not(.has-form) a:not(.button):hover {
         background: #537428; }
     .top-bar-section li.active:not(.has-form) a:not(.button) {
-      padding: 0 15px;
+      padding: 0 28px;
       line-height: 45px;
       color: white;
       background: #008cba; }
       .top-bar-section li.active:not(.has-form) a:not(.button):hover {
         background: #0078a0; }
     .top-bar-section .has-dropdown > a {
-      padding-right: 35px !important; }
+      padding-right: 48px !important; }
       .top-bar-section .has-dropdown > a:after {
         content: "";
         display: block;
@@ -4600,7 +4601,7 @@ meta.foundation-mq-topbar {
         color: white;
         line-height: 1;
         white-space: nowrap;
-        padding: 12px 15px;
+        padding: 0 28px;
         background: #333333; }
       .top-bar-section .dropdown li label {
         white-space: nowrap;
@@ -4632,7 +4633,7 @@ meta.foundation-mq-topbar {
 
   .no-js .top-bar-section ul li:hover > a {
     background: #537428;
-    color: white; }
+    color: #daac60; }
   .no-js .top-bar-section ul li:active > a {
     background: #008cba;
     color: white; }
@@ -5578,238 +5579,260 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+@font-face {
+  font-family: 'MyWebFont';
+  src: url("gravity-light-webfont.eot");
+  src: url("WebFont.eot?#iefix") format("embedded-opentype"), url("gravity-light-webfont.woff") format("woff"), url("gravity-light-webfont.ttf") format("truetype"), url("gravity-light-webfont.svg") format("svg"); }
+
 body {
-  background: url(../img/background.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-colour: #DDDDDD;
   margin: 0 auto;
-  position: relative; }
-
-#navlist {
-  padding: 6px;
-  margin: 0 auto;
-  border: 2px white solid;
-  outline-width: thick;
-  outline-color: #537428; }
-
-.header {
-  width: 800px; }
-
-.splash {
-  width: 45%;
-  margin: 0 auto; }
-
-.title {
-  width: 650px;
-  margin: 20px auto; }
-  .title h4 {
-    color: #E00000;
-    font-family: futura; }
-
-.green-bar {
-  background-color: #537428;
-  height: 155px;
-  width: 890px;
-  margin: 20px auto; }
-
-.image {
-  padding-top: 10px;
-  text-align: center; }
-
-.copyright {
-  height: 20px; }
-  .copyright p {
-    text-align: center;
-    font-family: myriad pro;
-    font-size: 11px;
-    margin-top: 40px; }
-
-.footer-nav {
-  text-align: center; }
-
-.footer-nav ul li {
-  display: inline;
-  font-size: 12px;
-  font-color: black; }
-
-.footer-nav ul a:hover {
-  color: #DAAC60; }
-
-.links {
-  width: 280px;
-  margin: 20px auto; }
-  .links div.row {
-    height: 30px;
+  position: relative;
+  /** recipes categories page **/
+  /** Seafood Page **/
+  /** Ingredients page **/
+  /* ==========================================================================
+     Media Queries
+     ========================================================================== */
+  /* ==========================================================================
+     Helper classes
+     ========================================================================== */
+  /* ==========================================================================
+     Print styles
+     ========================================================================== */ }
+  body .nav-row {
+    background-color: #537428;
+    position: relative;
+    padding: 2px; }
+    body .nav-row .logo {
+      position: absolute;
+      top: -48px;
+      left: 49px;
+      height: 140px; }
+  body .bordered {
+    border: 1px solid white;
+    padding-left: 250px; }
+  body .top {
+    position: absolute;
+    top: 50px;
+    left: 390px;
+    width: 1000px; }
+  body .header {
+    width: 600px; }
+  body .splash {
+    width: 700px;
+    margin: 20px auto; }
+  body .blurb {
+    width: 600px;
     margin: 0 auto; }
-
-.icon-container {
-  text-align: center;
-  margin-top: 100px;
-  height: 100px; }
-
-.icons {
-  text-align: center;
-  height: 100%;
-  width: 100%; }
-
-/** recipes categories page **/
-.categories {
-  width: 600px;
-  margin: 90px auto; }
-
-.red {
-  width: 600px;
-  margin: 20px auto;
-  padding: 20px; }
-  .red h4 {
-    color: red; }
-
-.box1 {
-  padding-bottom: 50px; }
-
-.copyright {
-  height: 20px; }
-  .copyright p {
+    body .blurb p {
+      text-align: center; }
+  body .title {
+    width: 650px;
+    margin: 20px auto; }
+    body .title h4 {
+      color: #E00000;
+      font-family: futura; }
+  body .green-bar {
+    background-color: #537428;
+    width: 40%;
+    margin: 0px auto;
+    padding: 2px; }
+  body .border {
+    border: 1px solid white;
+    overflow: hidden; }
+  body .image {
+    padding: 10px;
+    text-align: center; }
+    body .image h6 {
+      background-color: rgba(221, 221, 221, 0.6);
+      font-family: myriad pro;
+      text-align: left;
+      padding: 3px; }
+  body .copyright {
+    height: 20px; }
+    body .copyright p {
+      text-align: center;
+      font-family: gravity light;
+      font-size: 11px;
+      margin-top: 40px; }
+  body .footer-nav {
     text-align: center;
-    font-family: myriad pro;
-    font-size: 11px;
-    margin-top: 40px; }
-
-.bottom-nav {
-  text-align: center; }
-
-.bottom-nav ul li {
-  display: inline;
-  font-size: 12px;
-  font-color: black; }
-
-.bottom-nav ul a:hover {
-  color: #DAAC60; }
-
-.bottom-links {
-  width: 280px;
-  margin: 20px auto; }
-  .bottom-links div.row {
+    font-family: gravity light; }
+  body .footer-nav ul li {
+    display: inline;
+    font-size: 12px;
+    font-color: black; }
+  body .footer-nav ul a:hover {
+    color: #DAAC60; }
+  body .links {
+    width: 280px;
+    margin: 20px auto; }
+    body .links div.row {
+      height: 30px;
+      margin: 0 auto; }
+  body .icon-container {
+    text-align: center;
+    margin-top: 100px;
+    height: 100px; }
+  body .icons {
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    margin-bottom: 10px; }
+  body .red {
+    width: 700px;
+    margin: 20px auto;
+    padding: 20px; }
+    body .red h4 {
+      color: #E00000;
+      padding-left: 20px;
+      padding-top: 10px;
+      font-family: myriad pro; }
+  body .categories {
+    width: 700px;
+    margin: 0 auto;
+    font-family: myriad pro; }
+  body .box1 {
+    padding-bottom: 50px;
+    padding-left: 15px;
+    width: 100%; }
+  body .box2 {
+    padding-left: 15px; }
+  body .food-labels {
+    background-color: #DDDDDD;
     height: 30px;
-    margin: 0 auto; }
-
-.icon-container {
-  text-align: center;
-  margin-top: 20px;
-  height: 100%;
-  width: 100%; }
-
-.icons {
-  text-align: center;
-  height: 100%;
-  width: 100%; }
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-.ir {
-  background-color: transparent;
-  border: 0;
-  overflow: hidden;
-  *text-indent: -9999px; }
-
-.ir:before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 150%; }
-
-.hidden {
-  display: none !important;
-  visibility: hidden; }
-
-.visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px; }
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  width: auto; }
-
-.invisible {
-  visibility: hidden; }
-
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table; }
-
-.clearfix:after {
-  clear: both; }
-
-.clearfix {
-  *zoom: 1; }
-
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
-@media print {
-  * {
-    background: transparent !important;
-    color: #000 !important;
-    box-shadow: none !important;
-    text-shadow: none !important; }
-
-  a,
-  a:visited {
-    text-decoration: underline; }
-
-  a[href]:after {
-    content: " (" attr(href) ")"; }
-
-  abbr[title]:after {
-    content: " (" attr(title) ")"; }
-
-  .ir a:after,
-  a[href^="javascript:"]:after,
-  a[href^="#"]:after {
-    content: ""; }
-
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid; }
-
-  thead {
-    display: table-header-group; }
-
-  tr,
-  img {
-    page-break-inside: avoid; }
-
-  img {
-    max-width: 100% !important; }
-
-  @page {
-    margin: 0.5cm; }
-
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3; }
-
-  h2,
-  h3 {
-    page-break-after: avoid; } }
+    width: 100%;
+    font-size: 20px; }
+  body .copyright {
+    height: 20px; }
+    body .copyright p {
+      text-align: center;
+      font-family: myriad pro;
+      font-size: 11px;
+      margin-top: 40px; }
+  body .bottom-nav {
+    text-align: center; }
+  body .bottom-nav ul li {
+    display: inline;
+    font-size: 12px;
+    font-color: black; }
+  body .bottom-nav ul a:hover {
+    color: #DAAC60; }
+  body .bottom-links {
+    width: 280px;
+    margin: 20px auto; }
+    body .bottom-links div.row {
+      height: 30px;
+      margin: 0 auto; }
+  body .icon-container {
+    text-align: center;
+    margin-top: 20px;
+    height: 100%;
+    width: 100%; }
+  body .icons {
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    margin-bottom: 10px; }
+  body .red {
+    width: 700px;
+    margin: 20px auto;
+    padding: 20px; }
+    body .red h4 {
+      color: #E00000;
+      padding-left: 15px;
+      font-family: futura; }
+  body .seafood-labels {
+    background-color: #DDDDDD;
+    height: 30px;
+    width: 100%;
+    position: relative; }
+  body h5 {
+    font-family: myriad pro; }
+  body .rating {
+    content: "\2605"; }
+  body .rating {
+    position: absolute; }
+  body .meal-box {
+    padding-left: 50px; }
+  body .ir {
+    background-color: transparent;
+    border: 0;
+    overflow: hidden;
+    *text-indent: -9999px; }
+  body .ir:before {
+    content: "";
+    display: block;
+    width: 0;
+    height: 150%; }
+  body .hidden {
+    display: none !important;
+    visibility: hidden; }
+  body .visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px; }
+  body .visuallyhidden.focusable:active,
+  body .visuallyhidden.focusable:focus {
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    width: auto; }
+  body .invisible {
+    visibility: hidden; }
+  body .clearfix:before,
+  body .clearfix:after {
+    content: " ";
+    display: table; }
+  body .clearfix:after {
+    clear: both; }
+  body .clearfix {
+    *zoom: 1; }
+  @media print {
+    body {
+      @page {
+        margin: 0.5cm; }
+ }
+      body * {
+        background: transparent !important;
+        color: #000 !important;
+        box-shadow: none !important;
+        text-shadow: none !important; }
+      body a,
+      body a:visited {
+        text-decoration: underline; }
+      body a[href]:after {
+        content: " (" attr(href) ")"; }
+      body abbr[title]:after {
+        content: " (" attr(title) ")"; }
+      body .ir a:after,
+      body a[href^="javascript:"]:after,
+      body a[href^="#"]:after {
+        content: ""; }
+      body pre,
+      body blockquote {
+        border: 1px solid #999;
+        page-break-inside: avoid; }
+      body thead {
+        display: table-header-group; }
+      body tr,
+      body img {
+        page-break-inside: avoid; }
+      body img {
+        max-width: 100% !important; }
+      body p,
+      body h2,
+      body h3 {
+        orphans: 3;
+        widows: 3; }
+      body h2,
+      body h3 {
+        page-break-after: avoid; } }
